# ChangeLog for dev-perl/SOAP-Lite
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/SOAP-Lite/ChangeLog,v 1.63 2011/01/04 19:10:32 tove Exp $

  04 Jan 2011; Torsten Veller <tove@gentoo.org> -SOAP-Lite-0.69.ebuild:
  Cleanup

  29 Dec 2010; Brent Baude <ranger@gentoo.org> SOAP-Lite-0.711.ebuild:
  stable ppc64, bug 344591

  13 Nov 2010; Raúl Porcel <armin76@gentoo.org> SOAP-Lite-0.711.ebuild:
  alpha/ia64/sparc stable wrt #344591

  08 Nov 2010; Markos Chandras <hwoarang@gentoo.org> SOAP-Lite-0.711.ebuild:
  Stable on amd64 wrt bug #344591

  08 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  SOAP-Lite-0.711.ebuild:
  stable x86, bug 344591

  05 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  SOAP-Lite-0.710.10.ebuild:
  ppc64 stable wrt #341865

  27 Oct 2010; Torsten Veller <tove@gentoo.org> SOAP-Lite-0.712.ebuild:
  Depends on dev-perl/Class-Inspector (#342191)

*SOAP-Lite-0.712 (10 Aug 2010)

  10 Aug 2010; Robin H. Johnson <robbat2@gentoo.org>
  +SOAP-Lite-0.712.ebuild:
  Version bump via perl-bump experimental tool.

  27 Jun 2010; <nixnut@gentoo.org> SOAP-Lite-0.710.10.ebuild:
  ppc stable #323529

  08 May 2010; Raúl Porcel <armin76@gentoo.org> SOAP-Lite-0.710.10.ebuild:
  alpha/ia64/sparc stable wrt #314467

  17 Apr 2010; Torsten Veller <tove@gentoo.org> SOAP-Lite-0.710.10.ebuild,
  SOAP-Lite-0.711.ebuild:
  Stable on amd64, x86 (#314467). Shorten DESCRIPTION

*SOAP-Lite-0.711 (27 Mar 2010)

  27 Mar 2010; Robin H. Johnson <robbat2@gentoo.org>
  +SOAP-Lite-0.711.ebuild:
  Version bump via perl-bump experimental tool.

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -SOAP-Lite-0.710.08.ebuild:
  Cleanup

*SOAP-Lite-0.710.10 (10 Nov 2009)

  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  +SOAP-Lite-0.710.10.ebuild:
  Version bump via perl-bump experimental tool.

  19 Jul 2009; Torsten Veller <tove@gentoo.org> SOAP-Lite-0.69.ebuild,