@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/SOAP-Lite
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/SOAP-Lite/ChangeLog,v 1.63 2011/01/04 19:10:32 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/SOAP-Lite/ChangeLog,v 1.64 2011/01/13 17:08:44 ranger Exp $
+
+  13 Jan 2011; Brent Baude <ranger@gentoo.org> SOAP-Lite-0.711.ebuild:
+  stable ppc, bug 344591
 
   04 Jan 2011; Torsten Veller <tove@gentoo.org> -SOAP-Lite-0.69.ebuild:
   Cleanup
